--- a/NexoAPI/NexoAPI.csproj
+++ b/NexoAPI/NexoAPI.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Neo" Version="3.5.0" />
     <PackageReference Include="Neo.Network.RPC.RpcClient" Version="3.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
