--- a/NexoAPI/appsettings.json
+++ b/NexoAPI/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "NexoAPIContext": "Server=(localdb)\\mssqllocaldb;Database=NexoAPI.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "OneGateExplorerAPI": "https://explorer.onegate.space/api",
+  "OneGateQuoteAPI": "https://onegate.space/api/quote?convert=usd",
+  "NetWork": 860833102
 }
