--- a/NexoAPI/appsettings.json
+++ b/NexoAPI/appsettings.json
@@ -11,5 +11,6 @@
   },
   "OneGateExplorerAPI": "https://explorer.onegate.space/api",
   "OneGateQuoteAPI": "https://onegate.space/api/quote?convert=usd",
+  "SeedNode": "http://seed5t5.neo.org:20333",
   "NetWork": 860833102
 }
