修复ProtocolSettings相关的Bug

--- a/NexoAPI/appsettings.json
+++ b/NexoAPI/appsettings.json
@@ -12,5 +12,5 @@
   "OneGateExplorerAPI": "https://explorer.onegate.space/api",
   "OneGateQuoteAPI": "https://onegate.space/api/quote?convert=usd",
   "SeedNode": "http://seed5t5.neo.org:20332",
-  "NetWork": 860833102
+  "Config": "config.testnet.json"
 }
